# bdbd2

./: .gitignore  README.md
.devcontainer/: Dockerfile
.github/actions/rosdoc2/: main.sh
.github/workflows/: docs.yaml
bdbd2/: CMakeLists.txt  README.md  package.xml  rosdoc2.yaml
bdbd2/doc/: conf.py  index.rst
bdbd2_core/: CMakeLists.txt  package.xml
bdbd2_core/scripts/: dialogpt.py
bdbd2_jetbot/: CMakeLists.txt  README.md  package.xml  rosdoc2.yaml
bdbd2_jetbot/bdbd2_jetbot/: __init__.py  drivers.py  hearit.py  sayit.py
bdbd2_jetbot/bdbd2_jetbot/libpy/: BatteryStatus.py  INA260.py  MotorHat.py  PCA9685.py  PanTiltHat.py  __init__.py  googleTTS.py  rerecognizer.py  respeaker_tuning.py
bdbd2_jetbot/doc/: conf.j2  conf.py  index.j2  index.rst
bdbd2_jetbot/launch/: camera.launch.py  video_source.launch.py
bdbd2_jetbot/nodes/: drivers  hearit
bdbd2_jetbot/scripts/: atest.sh  camera.py  dialogpt_cuda.py  echo_msg_test.py  install.sh  motors_test.py  pytorch_install.sh  ros2_install.sh  sayit_msg_test.py  sysprep.sh  test_motors_msg.py  test_pantilt.py  test_pantilt_msg.py  transformers_install.sh  waveshare_motortest.py
bdbd2_msgs/: CMakeLists.txt  README.md  package.xml
bdbd2_msgs/doc/: conf.py  index.rst
bdbd2_msgs/msg/: AngledText.msg  MotorsRaw.msg  PanTilt.msg
bdbd2_msgs/srv/: GetPanTilt.srv  SayText.srv  SetPanTilt.srv
bdbd2_nodes/: CMakeLists.txt  README.md  package.xml
bdbd2_nodes/doc/: conf.j2  conf.py  index.j2  index.rst
docs/: index.html
docs/bdbd2/: .buildinfo  Overview.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/bdbd2/.doctrees/: Overview.doctree  environment.pickle  index.doctree
docs/bdbd2/_sources/: Overview.md.txt
docs/bdbd2_jetbot/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/bdbd2_jetbot/.doctrees/: environment.pickle  index.doctree
docs/bdbd2_msgs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/bdbd2_msgs/.doctrees/: environment.pickle  index.doctree
docs/bdbd2_msgs/_sources/: index.rst.txt
