<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bdbd2</name>
  <version>0.0.0</version>
  <description>Meta package for my personal robot named BDBD, ROS2 version</description>
  <maintainer email="kent@caspia.com">R. Kent James</maintainer>
  <author email="kent@caspia.com">R. Kent James</author>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/rkent/bdbd2</url>
  <url type="website">https://rkent.github.io/bdbd2/bdbd2</url>
  <url type="bugtracker">https://github.com/rkent/bdbd2/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bdbd2_msgs</exec_depend>
  <exec_depend>bdbd2_jetbot</exec_depend>
  <exec_depend>bdbd2_core</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>
