<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bdbd2_core</name>
  <version>0.0.0</version>
  <description>Nodes for my personal robot named BDBD2 that can run anywhere</description>
  <maintainer email="kent@caspia.com">bdbd2</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>bdbd2_msgs</depend>
  <depend>audio_common_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
