<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bdbd2_jetbot</name>
  <version>0.0.0</version>
  <description>Contains the nodes for my personal robot named BDBD, ROS2 version</description>
  <maintainer email="kent@caspia.com">R. Kent James</maintainer>
  <author email="kent@caspia.com">R. Kent James</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>
