<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bdbd2_msgs</name>
  <version>0.0.0</version>
  <description>Contains the messages, actions, and services for my personal robot named BDBD, ROS2 version</description>
  <maintainer email="kent@caspia.com">R. Kent James</maintainer>
  <author email="kent@caspia.com">R. Kent James</author>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/rkent/bdbd2</url>
  <url type="website">https://rkent.github.io/bdbd2/bdbd2</url>
  <url type="bugtracker">https://github.com/rkent/bdbd2/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>
